# grangeat-2d-3d-register-pytorch

./: .clang-format  .gitignore  CUDATexture_8cu.html  CUDATexture_8h.html  CUDATexture_8h_source.html  Common_8h.html  Common_8h_source.html  Conventions.md  Conventions_8md.html  DockerfileCPU  DockerfileCUDA  Global_8h.html  Global_8h_source.html  GridSample3DCPU_8cpp.html  GridSample3DCUDA_8cu.html  GridSample3D_8h.html  GridSample3D_8h_source.html  ProjectDRRCPU_8cpp.html  ProjectDRRCUDA_8cu.html  ProjectDRRCuboidMaskCPU_8cpp.html  ProjectDRRCuboidMaskCPU_8h.html  ProjectDRRCuboidMaskCPU_8h_source.html  ProjectDRRCuboidMaskCUDA_8cu.html  ProjectDRRCuboidMask_8cpp.html  ProjectDRRCuboidMask_8h.html  ProjectDRRCuboidMask_8h_source.html  ProjectDRR_8h.html  ProjectDRR_8h_source.html  README.md  README_8md.html  Radon2DCPU_8cpp.html  Radon2DCUDA_8cu.html  Radon2D_8h.html  Radon2D_8h_source.html  Radon3DCPU_8cpp.html  Radon3DCUDA_8cu.html  Radon3D_8h.html  Radon3D_8h_source.html  ResampleHEALPixSinogram3DCPU_8cpp.html  ResampleHEALPixSinogram3D_8h.html  (+202 more)
.zed/: debug.json  tasks.json
Extension/: CMakeLists.txt  Conventions.md  README.md  Texture2D.h  __init__.py  autograd.py  autograd_impl.py  mainpage.md  muladd.cu  mymuladd.cpp  ops.py  pyproject.toml  radon.cpp  radonCUDA.cu  setup.py  structs.py
Extension/Docs/: Doxyfile
Extension/Docs/custom/: header.html
Extension/ExtensionTest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Extension/include/: CUDATexture.h  Common.h  Global.h  GridSample3D.h  ProjectDRR.h  ProjectDRRCuboidMask.h  ProjectDRRCuboidMaskCPU.h  Radon2D.h  Radon3D.h  ResampleHEALPixSinogram3D.h  ResampleSinogram3D.h  Similarity.h  SinogramClassic3D.h  SinogramClassic3DCPU.h  SinogramHEALPix.h  SinogramHEALPixCPU.h  Texture.h  Texture2D.h  Texture2DCPU.h  Texture2DCUDA.h  Texture3D.h  Texture3DCPU.h  Texture3DCUDA.h  Texture3DHEALPixCPU.h  Vec.h  Vector.h
Extension/src/: CUDATexture.cu  GridSample3D.cpp  GridSample3DCPU.cpp  GridSample3DCUDA.cu  ProjectDRRCPU.cpp  ProjectDRRCUDA.cu  ProjectDRRCuboidMask.cpp  ProjectDRRCuboidMaskCPU.cpp  ProjectDRRCuboidMaskCUDA.cu  Radon2DCPU.cpp  Radon2DCUDA.cu  Radon3DCPU.cpp  Radon3DCUDA.cu  ResampleHEALPixSinogram3DCPU.cpp  ResampleSinogram3DCPU.cpp  ResampleSinogram3DCUDA.cu  SimilarityCPU.cpp  SimilarityCUDA.cu  main.cpp  radon2d.cpp  radon2dCUDA.cu  radon3d.cpp  radon3dCUDA.cu  resample.cpp
Extension/src/extension.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Extension/src/reg23.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Extension/tests/: test_cudatexture.py  test_grid_sample3d.py  test_ncc.py  test_project_drr.py
cpp/: Common_8h_source.html  ProjectDRRCuboidMaskCPU_8h_source.html  ProjectDRRCuboidMaskCUDA_8cu.html  ProjectDRR_8h.html  Radon2DCPU_8cpp.html  Radon3DCPU_8cpp.html  Radon3DCUDA_8cu.html  Similarity_8h.html  Similarity_8h_source.html  SinogramClassic3D_8h.html  Texture2DCUDA_8h_source.html  Texture3DCUDA_8h.html  Texture_8h.html  (+24 more)
reg23/: CMakeLists.txt  CUDATexture_8cu.html  CUDATexture_8h.html  CUDATexture_8h_source.html  Common_8h.html  Common_8h_source.html  Conventions_8md.html  Global_8h.html  Global_8h_source.html  GridSample3DCPU_8cpp.html  GridSample3DCUDA_8cu.html  GridSample3D_8h.html  GridSample3D_8h_source.html  ProjectDRRCPU_8cpp.html  ProjectDRRCUDA_8cu.html  ProjectDRRCuboidMaskCPU_8cpp.html  ProjectDRRCuboidMaskCPU_8h.html  ProjectDRRCuboidMaskCPU_8h_source.html  ProjectDRRCuboidMaskCUDA_8cu.html  ProjectDRR_8h.html  ProjectDRR_8h_source.html  README.md  Radon2DCPU_8cpp.html  Radon2DCUDA_8cu.html  Radon2D_8h.html  Radon2D_8h_source.html  Radon3DCPU_8cpp.html  Radon3DCUDA_8cu.html  Radon3D_8h.html  Radon3D_8h_source.html  ResampleSinogram3DCPU_8cpp.html  ResampleSinogram3DCUDA_8cu.html  ResampleSinogram3D_8h.html  ResampleSinogram3D_8h_source.html  SimilarityCPU_8cpp.html  SimilarityCUDA_8cu.html  Similarity_8h.html  Similarity_8h_source.html  SinogramClassic3D_8h.html  SinogramClassic3D_8h_source.html  (+155 more)
reg23/Docs/: Doxyfile
reg23/include/: Radon2D.h  Radon3D.h  Texture3DCUDA.h  Vec.h
reg23/include/reg23/: CUDATexture.h  CommonMPS.h  MPSTexture.h  ProjectDRR.h  Texture3DCPU.h  Texture3DMPS.h  Vec.h
reg23/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_19.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_6.js  classes_7.js  enums_1.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_b.js  functions_c.js  (+17 more)
reg23/src/: CUDATexture.cu  GridSample3DCUDA.cu  ProjectDRRCPU.cpp  ProjectDRRCUDA.cu  Radon2DCPU.cpp  Radon3DCUDA.cu  ResampleSinogram3DCUDA.cu  SimilarityCPU.cpp  main.cpp
reg23/src/backend/: main.cpp
reg23/src/backend/cpu/: ProjectDRRCPU.cpp  Radon2DCPU.cpp  ResampleSinogram3DCPU.cpp
reg23/src/backend/cuda/: CUDATexture.cu  GridSample3DCUDA.cu  ProjectDRRCUDA.cu  Radon3DCUDA.cu  ResampleSinogram3DCUDA.cu  SimilarityCUDA.cu
reg23/src/backend/include/reg23/: CUDATexture.h  Common.h  CommonMPS.h  Global.h  GridSample3D.h  MPSTexture.h  ProjectDRR.h  ProjectDRRCuboidMaskCPU.h  ResampleSinogram3D.h  SinogramClassic3D.h  Texture.h  Texture2DCUDA.h  Texture3DCUDA.h  Vec.h  default_metallib.h
reg23/src/backend/mps/: AddTensorsMPS.mm  MPSTexture.mm  ProjectDRRMPS.mm
reg23/src/backend/mps/shaders/: project_drr.metal
reg23/src/cpu/: GridSample3DCPU.cpp  ProjectDRRCPU.cpp  ProjectDRRCuboidMaskCPU.cpp  Radon2DCPU.cpp  Radon3DCPU.cpp  ResampleSinogram3DCPU.cpp  SimilarityCPU.cpp
reg23/src/cuda/: ProjectDRRCUDA.cu  ProjectDRRCuboidMaskCUDA.cu  Radon2DCUDA.cu
reg23/src/mps/: AddTensorsMPS.mm  CommonMPS.mm  MPSTexture.mm  ProjectDRRMPS.mm
reg23/src/mps/shaders/: project_drr.metal
reg23/src/reg23/: __init__.py  autograd.py  ops.py  structs.py
reg23/tests/: test_cudatexture.py  test_grid_sample3d.py  test_project_drr.py
(+783 files in other folders)
